--- a/css/style.css
+++ b/css/style.css
@@ -267,3 +267,42 @@ body {
 .en-name {
   color: #A5A5A5;
 }
+
+.news {
+  background: #F3F3F3;
+  padding-top: 70px;
+  padding-bottom: 100px;
+}
+
+.section-news-title {
+  font-weight: 900;
+  color: #000;
+  margin-bottom: 65px;
+}
+
+.news-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+}
+
+.news-card {
+  flex-basis: 23%;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 5px;
+}
+
+.news-date {
+  font-size: 14px;
+  line-height: normal;
+}
+
+.news-title {
+  font-size: 14px;
+  font-weight: 900;
+  line-height: normal;
+  color: #000;
+  margin-top: 14px;
+}
