--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,18 @@ body {
   margin-top: 14px;
 }
 
+.button-next {
+  display: none;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 99;
+  cursor: pointer;
+}
+
 @media(max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -543,6 +555,14 @@ body {
   .news {
     padding-top: 50px;
     padding-bottom: 70px;
+  }
+
+  .news-card {
+    max-width: 90%;
+  }
+
+  .button-next {
+    display: block;
   }
 
   .mobile-buttons {
