create: creators & tabs

--- a/css/style.css
+++ b/css/style.css
@@ -280,9 +280,19 @@ body {
 }
 
 .tabs-content {
-  display: flex;
+  display: none;
   align-items: center;
   flex-wrap: wrap;
+  visibility: hidden;
+}
+
+.tabs-content.visible {
+  display: flex;
+  visibility: visible;
+}
+
+.tab {
+  cursor: pointer;
 }
 
 .card {
